--- a/.github/workflows/job-check.yml
+++ b/.github/workflows/job-check.yml
@@ -32,6 +32,6 @@ jobs:
         run: |
           git config --global user.name "github-actions"
           git config --global user.email "actions@github.com"
-          git add old_jobs.csv
+          git add jobs.csv
           git commit -m "Update jobs file" || echo "No changes"
           git push
